# orkestra-os

./: .gitignore  .licensesnip  AGENTS.md  LICENCE  README.md  eslint.config.js  index.html  licensesnip.config.jsonc  package.json  vite.config.ts
.ai/planning/opencode/: events.md  reducer.md
.ai/planning/performance/: phase1.md  phase2.md  phase3.md
.github/workflows/: release.yml
docs/: index.html
docs/updates/: latest.json
scripts/: release-assets.mjs  release-assets.test.ts  rpm-package.mjs  rpm-package.test.ts  tauri-config.mjs  tauri-config.test.ts  tauri-wrapper.mjs
src/: App.tsx  index.css  index.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init_projects.sql  0002_init_core_tables.sql  0003_init_tasks.sql  0004_add_task_display_key.sql  0005_task_dependencies.sql  0006_init_runs.sql  0007_add_run_source_branch.sql  0008_add_runs_opencode_session_id.sql  0009_add_tasks_implementation_guide.sql  0010_add_runs_initial_prompt_tracking.sql  0011_add_runs_initial_prompt_claim_tracking.sql  0012_add_runs_active_task_unique_index.sql  0013_add_repository_scripts_and_run_lifecycle_tracking.sql  0014_add_runs_model_selection_defaults.sql  0015_add_task_search_fts.sql  0016_add_project_run_defaults.sql  0017_update_run_status_lifecycle.sql  0018_add_runs_run_state.sql  0019_drop_runs_single_active_index.sql  0020_add_project_env_vars.sql  0021_allow_rejected_run_status.sql  0022_add_run_identifiers.sql  0023_add_project_run_prepend_instructions.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs  state.rs
src-tauri/src/app/bootstrap/: logging.rs  mod.rs  paths.rs
src-tauri/src/app/commands/: context.rs  error_mapping.rs  health.rs  mod.rs  projects.rs  runs.rs  tasks.rs  terminal.rs  updates.rs  worktrees.rs
src-tauri/src/app/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/app/db/repositories/: mod.rs  projects.rs  runs.rs  task_search.rs  tasks.rs
src-tauri/src/app/errors/: app_error.rs  mod.rs  sentry.rs
src-tauri/src/app/projects/: directory_search_service.rs  dto.rs  env.rs  errors.rs  mod.rs  models.rs  search_service.rs  service.rs
src-tauri/src/app/runs/: delete_service.rs  diff_service.rs  dto.rs  errors.rs  merge_service.rs  mod.rs  models.rs  opencode_service.rs  run_state_service.rs  service.rs  status_transition_service.rs  task_completion_service.rs  test_utils.rs
src-tauri/src/app/tasks/: dto.rs  errors.rs  mod.rs  models.rs  search_service.rs  service.rs  status_transition_service.rs
src-tauri/src/app/terminal/: error.rs  mod.rs  service.rs
src-tauri/src/app/worktrees/: dto.rs  error.rs  mod.rs  pathing.rs  service.rs
src/app/config/: alphaBuild.ts  supportLinks.ts
src/app/contexts/: OpenCodeDependencyContext.tsx
src/app/layouts/: AppShell.tsx
src/app/lib/: appSupport.test.ts  appSupport.ts  appUpdates.ts  (+24 more)
src/components/: CodeMirrorDiffEditor.test.tsx  CodeMirrorDiffEditor.tsx  MonacoDiffEditor.test.tsx  MonacoDiffEditor.tsx  MonacoEditor.tsx  codemirrorLanguages.test.ts  codemirrorLanguages.ts  monacoEnvironment.ts
src/pages/: AgentsPage.tsx  BoardPage.tsx  NotFoundPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ReviewsPage.tsx  RunDetailPage.tsx  SettingsPage.tsx  StartupRedirectPage.tsx  TaskCreatePage.tsx  TaskDetailPage.tsx  WorktreesPage.tsx
src/test/: setup.ts
(+131 files in other folders)
