[package]
name = "orkestraos"
version = "0.0.1+2"
description = "Desktop app for orchestrating AI agents with OpenCode across projects, tasks, and runs."
authors = ["Louis Scheepers"]
homepage = "https://github.com/FetchUpstream/orkestra-os"
repository = "https://github.com/FetchUpstream/orkestra-os"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orkestraos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
once_cell = "1.21.3"
camino = "1.2.2"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
git2 = { version = "0.20.4", default-features = false }
notify = "8.2.0"
notify-debouncer-full = "0.5.0"
portable-pty = "0.9.0"
base64 = "0.22.1"
opencode = { version = "1.2.20", package = "opencode-client-sdk" }
tokio-stream = { version = "0.1.17", features = ["sync"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
sentry = "0.47.0"
nucleo = "0.5"
ignore = "0.4"
